# aind-motion-energy

./: .gitignore  README.md  pyproject.toml
code/: run  run_capsule.py
docs/: design-notes.md  optimization-backlog.md
environment/: Dockerfile  postInstall  requirements.txt
notebooks/: ibl_vs_aind_motion_energy_comparison.ipynb
src/aind_motion_energy/: __init__.py  cli.py  compute.py  io.py  viz.py
tests/: test_compute.py  test_io.py  test_viz.py
